# mr_freeze

./: .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
freezer/: main.py
mr_freeze/: main.py  pyproject.toml
mr_freeze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_utils.py
