[tool.poetry]
name = "mr-freeze"
version = "0.1.0"
description = ""
authors = ["Alex <alexandersimcock@gmail.com>"]
readme = "README.md"
packages = [{include = "mr_freeze"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"
dead = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
