# setup.cfg
[metadata]
name = mr-freeze
description = freeze environment requirements to requirements.txt for dockerfile
version = 0.1.2
author = Alex Simcock
author_email = alexandersimcock@gmail.com
license = MIT

[options]
# packages = find:

[options.entry_points]
console_scripts =
    mr-freeze = mr_freeze.main:main
